--- a/backend/src/main/resources/static/chat.html
+++ b/backend/src/main/resources/static/chat.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Chat</title>
-  <link rel="stylesheet" href="styles.css">
-  <script src="js/chat.js" defer></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="chat-container">
-    <div class="chat-header">
-      <h2 id="userDisplayName"></h2>
-      <input type="text" id="searchUser" placeholder="Search users...">
+    <div class="chat-app">
+        <!-- Sidebar -->
+        <div class="sidebar">
+            <div class="sidebar-header">
+                <input type="text" id="searchUser" placeholder="Search users...">
+            </div>
+            <div class="chat-list" id="chatList">
+                <!-- Users will be injected dynamically -->
+            </div>
+        </div>
+
+        <!-- Chat Window -->
+        <div class="chat-window">
+            <div class="chat-header">
+                <h2 id="userDisplayName"></h2>
+            </div>
+            <div class="chat-messages" id="chatMessages">
+                <!-- Messages will be injected dynamically -->
+            </div>
+            <div class="chat-input">
+                <input type="text" id="messageInput" placeholder="Type a message..." disabled>
+                <button id="sendBtn" disabled>Send</button>
+            </div>
+        </div>
     </div>
-    <div class="chat-messages" id="chatMessages"></div>
-    <div class="chat-input">
-      <input type="text" id="messageInput" placeholder="Type a message...">
-      <button id="sendBtn">Send</button>
-    </div>
-  </div>
 </body>
 </html>
