--- a/backend/src/main/resources/static/chat.html
+++ b/backend/src/main/resources/static/chat.html
@@ -14,17 +14,17 @@
                 <input type="text" id="searchUser" placeholder="Search users...">
             </div>
             <div class="chat-list" id="chatList">
-                <!-- Users will be injected dynamically -->
+                <!-- User search results injected here -->
             </div>
         </div>
 
         <!-- Chat Window -->
         <div class="chat-window">
             <div class="chat-header">
-                <h2 id="userDisplayName"></h2>
+                <h2 id="userDisplayName">Select a user</h2>
             </div>
             <div class="chat-messages" id="chatMessages">
-                <!-- Messages will be injected dynamically -->
+                <!-- Messages injected here -->
             </div>
             <div class="chat-input">
                 <input type="text" id="messageInput" placeholder="Type a message..." disabled>
@@ -32,5 +32,10 @@
             </div>
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/stompjs@2.3.3/lib/stomp.min.js"></script>
+    <script src="js/chat.js"></script>
 </body>
 </html>
