--- a/backend/src/main/resources/static/login.html
+++ b/backend/src/main/resources/static/login.html
@@ -2,28 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login - Chat App</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="auth-body">
   <div class="auth-container">
-    <div class="auth-card">
-      <h1>Welcome!</h1>
-      <p class="auth-subtitle">Login to continue chatting</p>
-      <form id="loginForm">
-        <label>Email</label>
-        <input type="email" id="email" name="email" placeholder="Enter your email" required>
-        
-        <label>Password</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password" required>
-        
-        <button type="button" id="loginBtn" class="btn-primary">Login</button>
-      </form>
-      <p class="auth-footer">Don't have an account? 
-        <a href="signup.html">Sign up</a>
-      </p>
-    </div>
+    <h1>Welcome Back!</h1>
+    <p class="auth-subtitle">Login to continue chatting</p>
+
+    <form id="loginForm">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" placeholder="Enter your email" required>
+
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+      <button type="button" id="loginBtn">Login</button>
+    </form>
+
+    <p class="auth-footer">
+      Don't have an account? <a href="signup.html">Sign up</a>
+    </p>
   </div>
+
   <script src="js/auth.js"></script>
 </body>
 </html>
